--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/notifications/historyImport.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/notifications/historyImport.tpl.html
@@ -7,6 +7,7 @@
     <span class="title" ng-bind="notification.title"></span>
     <span class="desc" ng-bind="notification.description"></span>
  </td>
-<td  class="col">
+<td class="col">
     <span class="date" am-time-ago="notification.created"></span>
+    {{notification.created}}
 </td>
