--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
@@ -14,27 +14,33 @@
                         <input ng-model="blade.currentEntity.name" type="text" focus-on="" required>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="form-label">Catalog</label>
-                    <div class="form-input">
-                        <ui-select ng-model="blade.currentEntity.catalog">
-                            <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                            <ui-select-choices repeat="x.id as x in catalogs | filter: { name: $select.search }">
-                                <span ng-bind-html="x.name | highlight: $select.search"></span>
-                            </ui-select-choices>
-                        </ui-select>
+                <div class="columns clearfix">
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">Catalog</label>
+                            <div class="form-input">
+                                <ui-select ng-model="blade.currentEntity.catalog">
+                                    <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
+                                    <ui-select-choices repeat="x.id as x in catalogs | filter: { name: $select.search }">
+                                        <span ng-bind-html="x.name | highlight: $select.search"></span>
+                                    </ui-select-choices>
+                                </ui-select>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">State</label>
-                    <div class="form-input">
-                        <!-- <select va-chosen ng-model="blade.currentEntity.storeState" ng-options="x.id as x.name for x in storeStates" required></select> -->
-                        <ui-select ng-model="blade.currentEntity.storeState">
-                            <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                            <ui-select-choices repeat="x.id as x in storeStates | filter: { name: $select.search }">
-                                <span ng-bind-html="x.name | highlight: $select.search"></span>
-                            </ui-select-choices>
-                        </ui-select>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">State</label>
+                            <div class="form-input">
+                                <!-- <select va-chosen ng-model="blade.currentEntity.storeState" ng-options="x.id as x.name for x in storeStates" required></select> -->
+                                <ui-select ng-model="blade.currentEntity.storeState">
+                                    <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
+                                    <ui-select-choices repeat="x.id as x in storeStates | filter: { name: $select.search }">
+                                        <span ng-bind-html="x.name | highlight: $select.search"></span>
+                                    </ui-select-choices>
+                                </ui-select>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
