--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-languages.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalog-languages.tpl.html
@@ -4,7 +4,7 @@
             <div ng-if="currentBlade.manageDefaultLanguage == true">
                 <div class="sub-t">Select default language</div>
                 <div class="list __items">
-                    <label class="list-item" ng-repeat="data in currentBlade.availableLanguages | filter: {catalogId: '!!'}">
+                    <label class="list-item" ng-repeat="data in currentBlade.availableLanguages track by $index | filter: {catalogId: '!!'}">
                         <input type="checkbox" name="isDefault" ng-checked="data.isDefault" ng-click="setAsDefault(data)">
                         <span class="switch"></span>
                         <span class="list-name">{{data.displayName}}</span>
@@ -15,7 +15,7 @@
             <div ng-if="currentBlade.manageDefaultLanguage == false">
                 <div class="sub-t">Select languages</div>
                 <div class="list __items">
-                    <label class="list-item" ng-repeat="data in currentBlade.availableLanguages" ng-class="{'__disabled': data.isDefault}">
+                    <label class="list-item" ng-repeat="data in currentBlade.availableLanguages track by $index" ng-class="{'__disabled': data.isDefault}">
                         <input type="checkbox" name="available" ng-disabled="data.isDefault" ng-checked="data.catalogId != undefined" ng-click="selectLanguage(data)">
                         <span class="switch"></span>
                         <span class="list-name">{{data.displayName}}</span>
