--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/widgets/itemPricesWidget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/widgets/itemPricesWidget.tpl.html
@@ -1,4 +1,4 @@
 ﻿<div class="tile __price double wide" ng-click="openBlade()">
-    <span class="tile-price">{{priceRange}}</span>
+    <span class="tile-price">{{priceRange | number: 2}} {{currency}}</span>
     <span class="tile-descr">Price</span>
 </div>
