--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/edit-image-asset.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/edit-image-asset.tpl.html
@@ -8,11 +8,15 @@
 						<input focus-on="" ng-disabled="!blade.newAsset" required class="form-control" ng-model="blade.currentEntity.id" placeholder="Enter asset name" />
 					</div>
 				</div>
-				<div class="form-group">
-					<label class="form-label">Editorial asset content</label>
-					<div class="form-input">
-						<textarea style="max-height:350px; min-height:350px;" required class="form-control big" cols="60" rows="30" ng-model="blade.currentEntity.content" placeholder="Enter asset content"></textarea>
-					</div>
+				<!--<div class="form-group" ng-if="blade.check()">
+					<img ng-src="{{blade.currentEntity.content}}" />
+				</div>-->
+				<div class="form-input">
+					<input type="file" multiple uploader="uploader" nv-file-select style="z-index: 0;" tabindex="-1">
+					<input type="text" style="z-index: 1; cursor: default;" readonly="">
+					<button class="btn __file" type="button" onclick="$('input[type=file]').trigger('click')">
+						<i class="btn-ico fa fa-image"></i>
+					</button>
 				</div>
 			</form>
 		</div>
