-FIX standalone framework relations

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/dialogs/cancelOperation-dialog.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/dialogs/cancelOperation-dialog.tpl.html
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Cancel operation</h3>
 </div>
 <div class="modal-body">
-    The document has been modified. Do you want to save changes?
+    Are you sure want to cancel the document?
 </div>
 <textarea ng-model="cancelReason"></textarea>
 <div class="modal-footer">
