--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalogs-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/catalogs-list.tpl.html
@@ -2,7 +2,7 @@
     <div class="blade-inner">
         <div class="inner-block clearfix">
             <ul class="list __items">
-                <li class="list-item" ng-repeat="data in objects" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectNode(data)' context-menu data-target="cl_menu{{$index}}">
+                <li class="list-item" ng-repeat="data in objects track by data.id" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectNode(data)' context-menu data-target="cl_menu{{$index}}">
                     <ul class="menu __context" role="menu" id="cl_menu{{$index}}">
                         <li class="menu-item" ng-click='editCatalog(data)'>
                             <i class="menu-ico fa fa-edit"></i> Manage
