--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-detail.tpl.html
@@ -2,12 +2,12 @@
     <div class="blade-inner">
         <div class="inner-block">
             <form name="pdForm" class="form">
-               <div class="form-group">
+                <div class="form-group" ng-init="setForm(pdForm);">
                     <label class="form-label" for="">Property name</label>
-                    <div class="form-input" ng-init="setForm(pdForm);">
+                    <div class="form-input">
                         <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" />
                     </div>
-               </div>
+                </div>
                 <div class="form-group">
                     <label class="form-label" for="">Display name</label>
                     <div class="form-input __langs" ng-repeat="data in blade.origEntity.catalog.languages">
