--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-valueType.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-valueType.tpl.html
@@ -3,19 +3,19 @@
         <div class="inner-block">
             <ul class="list __items">
                 <label class="list-item" ng-mouseup="selectOption(0)">
-                    <input type="checkbox" ng-checked="0 === blade.parentBlade.currentEntity.valueType">
+                    <input type="checkbox" ng-checked="0 === $scope.blade.property.valueType">
                     <span class="switch"></span>
                     <span class="list-t">{{0 | propertydatatype}}</span>
                     <span class="list-descr">Text values less than 1024 chars.</span>
                 </label>
                 <label class="list-item" ng-mouseup="selectOption(1)">
-                    <input type="checkbox" ng-checked="1 === blade.parentBlade.currentEntity.valueType">
+                    <input type="checkbox" ng-checked="1 ===  $scope.blade.property..valueType">
                     <span class="switch"></span>
                     <span class="list-t">{{1 | propertydatatype}}</span>
                     <span class="list-descr">Huge amount text without size limit.</span>
                 </label>
                 <label class="list-item" ng-mouseup="selectOption(2)">
-                    <input type="checkbox" ng-checked="2 === blade.parentBlade.currentEntity.valueType">
+                    <input type="checkbox" ng-checked="2 ===  $scope.blade.property.valueType">
                     <span class="switch"></span>
                     <span class="list-t">{{2 | propertydatatype}}</span>
                     <span class="list-descr">Digital input with float point.</span>
