-UPD change PropertyType to string enum value.

--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-detail.tpl.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="list-item" ng-class="{'__selected': currentChild === 'valType'}" ng-click='openChild("valType")'>
                     <span class="list-t">Value Type</span>
-                    <span class="list-descr">{{blade.currentEntity.valueType | propertydatatype}}</span>
+                    <span class="list-descr">{{blade.currentEntity.valueType}}</span>
                 </li>
                 <li class="list-item" ng-class="{'__selected': currentChild === 'appliesto'}" ng-click='openChild("appliesto")'>
                     <span class="list-t">Applies to</span>
