--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/directives/property2.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/directives/property2.tpl.html
@@ -2,7 +2,7 @@
 
     <div id='valuePlaceHolder'></div>
 
-    <script type="text/ng-template" id="shortText.html">
+    <script type="text/ng-template" id="ShortText.html">
         <div class="form-input">
             <input 
             ng-disabled="currentEntity.isReadOnly"  
@@ -13,7 +13,7 @@
             type="text">
         </div>
     </script>
-    <script type="text/ng-template" id="longText.html">
+    <script type="text/ng-template" id="LongText.html">
         <div class="form-input">
             <textarea 
             ng-disabled="currentEntity.isReadOnly"
@@ -23,7 +23,7 @@
             placeholder="Please enter long text">
         </div>
     </script>
-    <script type="text/ng-template" id="number.html">
+    <script type="text/ng-template" id="Number.html">
         <!--<a href="#" editable-number="val.value">{{val.value || "N/A" }}</a>-->
         <div class="form-input">
             <input 
@@ -36,7 +36,7 @@
         </div>
     </script>
 
-    <script type="text/ng-template" id="shortText-multivalue.html">
+    <script type="text/ng-template" id="ShortText-multivalue.html">
         <tags-input 
         ng-model="context.currentPropValues"
         ng-disabled="currentEntity.isReadOnly"
@@ -47,7 +47,7 @@
         placeholder="Add value">
         </tags-input>
     </script>
-    <script type="text/ng-template" id="longText-multivalue.html">
+    <script type="text/ng-template" id="LongText-multivalue.html">
         <div class="form-group" ng-repeat="val in context.currentPropValues track by $index">
             <div class="form-input">
                 <textarea 
@@ -60,7 +60,7 @@
             <a ng-if="!currentEntity.isReadOnly" ng-click="context.currentPropValues.push({value:''})" style="cursor:pointer;">add value</a>
         </div>
     </script>
-    <script type="text/ng-template" id="number-multivalue.html">
+    <script type="text/ng-template" id="Number-multivalue.html">
         <tags-input 
         ng-model="context.currentPropValues"
         ng-disabled="currentEntity.isReadOnly"
@@ -74,7 +74,7 @@
         </tags-input>
     </script>
 
-    <script type="text/ng-template" id="shortText-dictionary.html">
+    <script type="text/ng-template" id="ShortText-dictionary.html">
         <div class="form-input">
             <ui-select ng-model="context.currentPropValues[0]" ng-disabled="disabled">
                 <ui-select-match placeholder="Select value">{{$select.selected.value}}</ui-select-match>
@@ -84,7 +84,7 @@
             </ui-select>
         </div>
     </script>
-    <script type="text/ng-template" id="number-dictionary.html">
+    <script type="text/ng-template" id="Number-dictionary.html">
         <div class="form-input">
             <ui-select ng-model="context.currentPropValues[0]" ng-disabled="disabled">
                 <ui-select-match placeholder="Select value">{{$select.selected.value}}</ui-select-match>
@@ -96,7 +96,7 @@
     </script>
 
 
-    <script type="text/ng-template" id="shortText-dictionary-multivalue.html">
+    <script type="text/ng-template" id="ShortText-dictionary-multivalue.html">
         <div class="form-input">
             <ui-select multiple ng-model="context.currentPropValues[0]" ng-disabled="disabled">
                 <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
@@ -106,7 +106,7 @@
             </ui-select>
         </div>
     </script>
-    <script type="text/ng-template" id="number-dictionary-multivalue.html">
+    <script type="text/ng-template" id="Number-dictionary-multivalue.html">
         <div class="form-input">
             <ui-select multiple ng-model="context.currentPropValues[0]" ng-disabled="disabled">
                 <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
@@ -118,7 +118,7 @@
     </script>
 
 
-    <script type="text/ng-template" id="shortText-multilang.html">
+    <script type="text/ng-template" id="ShortText-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -132,7 +132,7 @@
             </div>
         </div>
     </script>
-    <script type="text/ng-template" id="longText-multilang.html">
+    <script type="text/ng-template" id="LongText-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -144,7 +144,7 @@
             </div>
         </div>
     </script>
-    <script type="text/ng-template" id="number-multilang.html">
+    <script type="text/ng-template" id="Number-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __number">
                 <input 
@@ -159,7 +159,7 @@
     </script>
 
 
-    <script type="text/ng-template" id="shortText-multivalue-multilang.html">
+    <script type="text/ng-template" id="ShortText-multivalue-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
             <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -175,7 +175,7 @@
             </div>
         </div>
     </script>
-    <script type="text/ng-template" id="longText-multivalue-multilang.html">
+    <script type="text/ng-template" id="LongText-multivalue-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs" ng-repeat="val in langValuesGroup.currentPropValues track by $index">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -188,7 +188,7 @@
             <a ng-if="!currentEntity.isReadOnly" ng-click="langValuesGroup.currentPropValues.push({value:'', languageCode:language})" style="cursor:pointer;">add value</a>
         </div>
     </script>
-    <script type="text/ng-template" id="number-multivalue-multilang.html">
+    <script type="text/ng-template" id="Number-multivalue-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
             <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -208,7 +208,7 @@
     </script>
 
 
-    <script type="text/ng-template" id="shortText-dictionary-multilang.html">
+    <script type="text/ng-template" id="ShortText-dictionary-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs" data-role="input-control">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -221,7 +221,7 @@
             </div>
         </div>
     </script>
-    <script type="text/ng-template" id="number-dictionary-multilang.html">
+    <script type="text/ng-template" id="Number-dictionary-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs" data-role="input-control">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -236,7 +236,7 @@
     </script>
 
 
-    <script type="text/ng-template" id="shortText-dictionary-multivalue-multilang.html">
+    <script type="text/ng-template" id="ShortText-dictionary-multivalue-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
@@ -249,7 +249,7 @@
             </div>
         </div>
     </script>
-    <script type="text/ng-template" id="number-dictionary-multivalue-multilang.html">
+    <script type="text/ng-template" id="Number-dictionary-multivalue-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
